tests/ui/for/for-loop-unconstrained-element-type.stderr
error[E0282]: type annotations needed
  --> $DIR/for-loop-unconstrained-element-type.rs:8:14
   |
LL |     for i in Vec::new() { }
   |              ^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Vec`
   |
help: consider specifying the generic argument
   |
LL |     for i in Vec::<T>::new() { }
   |                 +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
